# language-smeil

./: .dir-locals.el  .gitignore  README.md  language-smeil.cabal  package.yaml  stack.yaml
app/: smeast.hs
docs/langspec/: .gitignore  langspec.tex
docs/langspec/samples/: addn.sme  addn2.sme  addn3.sme  allops.sme  allops2.sme  allops3.sme  allops4.sme  ewma.sme  simplefifo.sme
emacs/: sme-mode.el
src/Language/SMEIL/: JSON.hs  Parser.hs  Pretty.hs  Syntax.hs
src/Language/SMEIL/Parser/: Impl.hs  Lexer.hs  Monad.hs
test/: Spec.hs
